--- a/AdminClient/object/js/ui/ModalList.js.org
+++ b/AdminClient/object/js/ui/ModalList.js.org
@@ -1,10 +1,17 @@
 class ModalList
 {
-	constructor()
+	constructor(callBack)
 	{
-		var self=this;
 		this.moduleListDiv=document.createElement("div");
 		this.moduleListDiv.id="moduleListDiv";
+		this.logoutLink=document.createElement("a");
+		this.logoutLink.className="w3-bar-item w3-button"; 
+		this.logoutLink.addEventListener('click',function()
+								  {
+									  callBack();
+								  });
+		this.logoutLink.text="Logout";
+		this.moduleListDiv.appendChild(this.logoutLink);
 	}
 	collapse()
 	{
@@ -16,12 +23,7 @@ class ModalList
 	}
 	addModalUI(modalUI)
 	{
-		var self=this;
-		$(modalUI).children("a.w3-bar-item.w3-button").on("click",function()
-																 {
-																	 self.updateSideNavigation(this);
-																 });
-		this.moduleListDiv.appendChild(modalUI);
+		this.moduleListDiv.insertBefore(modalUI,this.logoutLink);
 	}
 	updateSideNavigation(obj)
 	{
@@ -33,8 +35,8 @@ class ModalList
 		$(obj).addClass("w3-red");
 		$(obj).next("div").removeClass("w3-hide");
 	}
-	getHTML()
+	getModalList()
 	{
 		return this.moduleListDiv;
 	}
-}	
+}
